# helloworld-crd

./: BUILD  Gopkg.toml  README.md  WORKSPACE  controller.go  controller.yaml  main.go  plugins.go
artifacts/examples/: BUILD  authz.yaml
hack/: update-codegen.sh  update-deps.sh
pkg/apis/samplecontroller/: BUILD
pkg/apis/samplecontroller/v1alpha1/: BUILD  register.go
pkg/client/clientset/versioned/: BUILD  clientset.go
pkg/client/clientset/versioned/fake/: BUILD  clientset_generated.go  register.go
pkg/client/clientset/versioned/scheme/: BUILD  register.go
pkg/client/clientset/versioned/typed/samplecontroller/v1alpha1/: BUILD  bar.go  foo.go  samplecontroller_client.go
pkg/client/clientset/versioned/typed/samplecontroller/v1alpha1/fake/: BUILD  fake_bar.go  fake_foo.go  fake_samplecontroller_client.go
pkg/client/informers/externalversions/: BUILD  generic.go
pkg/client/informers/externalversions/internalinterfaces/: BUILD
pkg/client/informers/externalversions/samplecontroller/: BUILD
pkg/client/informers/externalversions/samplecontroller/v1alpha1/: BUILD  bar.go  interface.go
pkg/client/listers/samplecontroller/v1alpha1/: BUILD  bar.go
pkg/controller/: BUILD.bazel  controller.go  register.go
pkg/controller/bar/: BUILD.bazel  controller.go  controller_test.go  register.go
pkg/controller/foo/: BUILD.bazel  controller.go  controller_test.go  register.go
pkg/signals/: BUILD
